force-app/main/default/objects/XactlyExpress__XCImportSource__c/XactlyExpress__XCImportSource__c.object-meta.xml
<CustomObject>
    <label>XCImportSource</label>
    <nameField>
        <label>XCImportSource Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCImportSource</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>