force-app/main/default/objects/XactlyExpress__XCImportSource__c/fields/XactlyExpress__EventNameField__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__EventNameField__c</fullName>
    <label>EventNameField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>