force-app/main/default/objects/XactlyExpress__XCImportSource__c/fields/XactlyExpress__ProrateCreditField__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ProrateCreditField__c</fullName>
    <label>ProrateCreditField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>