force-app/main/default/objects/XactlyExpress__XCImportSource__c/fields/XactlyExpress__ReadyField__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ReadyField__c</fullName>
    <label>ReadyField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>