force-app/main/default/objects/XactlyExpress__XCImportSource__c/fields/XactlyExpress__ReadyFieldType__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ReadyFieldType__c</fullName>
    <label>ReadyFieldType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>