force-app/main/default/objects/XactlyExpress__XCImportSource__c/fields/XactlyExpress__ReadyValue__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ReadyValue__c</fullName>
    <label>ReadyValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>