force-app/main/default/objects/XactlyExpress__XCImportSource__c/fields/XactlyExpress__ReleaseDateField__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ReleaseDateField__c</fullName>
    <label>SObjectMapField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>