force-app/main/default/objects/XactlyExpress__XCImportSource__c/fields/XactlyExpress__ReleaseType__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ReleaseType__c</fullName>
    <label>ReleaseType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Release</fullName>
                <default>true</default>
                <label>Release</label>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>