force-app/main/default/objects/XactlyExpress__XCImportSource__c/fields/XactlyExpress__SObjectMapField__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__SObjectMapField__c</fullName>
    <label>SObjectMapField</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>