force-app/main/default/objects/XactlyExpress__XCImportSource__c/fields/XactlyExpress__SourceLabel__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__SourceLabel__c</fullName>
    <label>SourceLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>