force-app/main/default/objects/XactlyExpress__XCImportSource__c/fields/XactlyExpress__UsageType__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__UsageType__c</fullName>
    <label>UsageType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Import</fullName>
                <default>true</default>
                <label>Import</label>
            </value>
            <value>
                <fullName>Release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>